[gd_scene load_steps=12 format=3 uid="uid://bwfvxfgqak7ib"]

[ext_resource type="Script" path="res://player_2_select_screen.gd" id="1_v2nh5"]
[ext_resource type="PackedScene" uid="uid://c38h8wrolu4je" path="res://mage_slot.tscn" id="2_w2m1o"]
[ext_resource type="Texture2D" uid="uid://r1wgk5bdpx1n" path="res://Mages/Aggressive/aggro_slot.png" id="3_1j0uo"]
[ext_resource type="Texture2D" uid="uid://k7acr3x7hcdu" path="res://Mages/Aggressive/agg_chosen_slot.png" id="4_bebn7"]
[ext_resource type="Texture2D" uid="uid://cd0sjnyq0o3bn" path="res://Mages/Defensive/def_slot.png" id="5_wp1x8"]
[ext_resource type="Texture2D" uid="uid://bg5fs0ral420w" path="res://Mages/Defensive/test_panel.png" id="6_ayjth"]
[ext_resource type="Texture2D" uid="uid://cvbloyik2wvg8" path="res://Mages/Sustaining/sus_slot.png" id="7_l8q42"]
[ext_resource type="Texture2D" uid="uid://h8el881bvt7w" path="res://Mages/Sustaining/sus_chosen_slot.png" id="8_stvcq"]
[ext_resource type="Texture2D" uid="uid://cocld6n62gvaj" path="res://Mages/Strategic/strat_slot.png" id="9_ebdnm"]
[ext_resource type="Texture2D" uid="uid://bqvgela6phvfh" path="res://Mages/Strategic/strat_chosen_slot.png" id="10_7dlvt"]

[sub_resource type="Theme" id="Theme_laig7"]

[node name="Player_2_Select_Screen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v2nh5")

[node name="VBoxContainer2" type="GridContainer" parent="."]
layout_mode = 2
offset_left = 3.0
offset_right = 1241.0
offset_bottom = 1742.0
theme_override_constants/v_separation = 140

[node name="Mage_Slot" parent="VBoxContainer2" instance=ExtResource("2_w2m1o")]
layout_mode = 2
characterPath = "res://Mages/Aggressive/aggro_mage.tscn"
characterTexture = ExtResource("3_1j0uo")

[node name="Chosen_Image1" type="TextureRect" parent="VBoxContainer2/Mage_Slot"]
layout_mode = 0
offset_left = 126.0
offset_top = -1081.0
offset_right = 720.0
offset_bottom = -522.0
texture = ExtResource("4_bebn7")

[node name="TextBox1" type="RichTextLabel" parent="VBoxContainer2/Mage_Slot"]
z_index = 21
layout_mode = 0
offset_left = 169.0
offset_top = 5.0
offset_right = 469.0
offset_bottom = 625.0
theme = SubResource("Theme_laig7")
text = "Aggressive Mage

Spells

1. Punch:

2. Fire Punch

3. Thunderous Dash

4. Furious Explosion"

[node name="Panel" type="Panel" parent="VBoxContainer2/Mage_Slot"]
z_index = -1
layout_mode = 0
offset_left = 164.0
offset_right = 474.0
offset_bottom = 627.0

[node name="Label1" type="Label" parent="VBoxContainer2/Mage_Slot"]
layout_mode = 2
offset_left = 232.0
offset_top = 213.0
offset_right = 319.0
offset_bottom = 236.0
scale = Vector2(4, 4)
text = "P2 is Ready"

[node name="Mage_Slot2" parent="VBoxContainer2" instance=ExtResource("2_w2m1o")]
z_index = -1
layout_mode = 2
characterPath = "res://Mages/Defensive/def_mage.tscn"
characterTexture = ExtResource("5_wp1x8")

[node name="Chosen_Image2" type="TextureRect" parent="VBoxContainer2/Mage_Slot2"]
layout_mode = 0
offset_left = 121.0
offset_top = -1225.0
offset_right = 715.0
offset_bottom = -666.0
texture = ExtResource("6_ayjth")

[node name="TextBox2" type="RichTextLabel" parent="VBoxContainer2/Mage_Slot2"]
z_index = 18
z_as_relative = false
layout_mode = 0
offset_left = 169.0
offset_top = -135.0
offset_right = 469.0
offset_bottom = 485.0
text = "Defensive Cleric:

Spells

1. Punch

2. Rock Lob

3. Shield

4. Force Push"

[node name="Label2" type="Label" parent="VBoxContainer2/Mage_Slot2"]
layout_mode = 0
offset_left = 230.0
offset_top = 69.0
offset_right = 317.0
offset_bottom = 92.0
scale = Vector2(4, 4)
text = "P2 is Ready"

[node name="Panel" type="Panel" parent="VBoxContainer2/Mage_Slot2"]
z_index = 1
layout_mode = 0
offset_left = 160.0
offset_top = -140.0
offset_right = 471.0
offset_bottom = 485.0

[node name="Mage_Slot3" parent="VBoxContainer2" instance=ExtResource("2_w2m1o")]
layout_mode = 2
characterPath = "res://Mages/Sustaining/sus_mage.tscn"
characterTexture = ExtResource("7_l8q42")

[node name="Chosen_Image3" type="TextureRect" parent="VBoxContainer2/Mage_Slot3"]
layout_mode = 0
offset_left = 114.0
offset_top = -1364.0
offset_right = 708.0
offset_bottom = -805.0
texture = ExtResource("8_stvcq")

[node name="TextBox3" type="RichTextLabel" parent="VBoxContainer2/Mage_Slot3"]
z_index = 19
layout_mode = 0
offset_left = 169.0
offset_top = -275.0
offset_right = 469.0
offset_bottom = 345.0
text = "Sustaining Wizard:

Spells

1. Punch:

2. Shining Bubble

3. Liquid Teleport

4. Watery Transmutation"

[node name="Label3" type="Label" parent="VBoxContainer2/Mage_Slot3"]
layout_mode = 0
offset_left = 232.0
offset_top = -71.0
offset_right = 319.0
offset_bottom = -48.0
scale = Vector2(4, 4)
text = "P2 is Ready"

[node name="Panel" type="Panel" parent="VBoxContainer2/Mage_Slot3"]
layout_mode = 0
offset_left = 163.0
offset_top = -277.0
offset_right = 473.0
offset_bottom = 343.0

[node name="Mage_Slot4" parent="VBoxContainer2" instance=ExtResource("2_w2m1o")]
layout_mode = 2
characterPath = "res://Mages/Strategic/strat_mage.tscn"
characterTexture = ExtResource("9_ebdnm")

[node name="Chosen_Image4" type="TextureRect" parent="VBoxContainer2/Mage_Slot4"]
layout_mode = 0
offset_left = 125.0
offset_top = -1519.0
offset_right = 719.0
offset_bottom = -960.0
texture = ExtResource("10_7dlvt")

[node name="TextBox4" type="RichTextLabel" parent="VBoxContainer2/Mage_Slot4"]
z_index = 18
layout_mode = 0
offset_left = 169.0
offset_top = -415.0
offset_right = 469.0
offset_bottom = 205.0
text = "Strategic Mage:

Spells

1. Punch

2. Explosion Rune

3. Teleport Rune

4. Hypnotic Command"

[node name="Label4" type="Label" parent="VBoxContainer2/Mage_Slot4"]
layout_mode = 0
offset_left = 232.0
offset_top = -209.0
offset_right = 319.0
offset_bottom = -186.0
scale = Vector2(4, 4)
text = "P2 is Ready"

[node name="Panel" type="Panel" parent="VBoxContainer2/Mage_Slot4"]
layout_mode = 0
offset_left = 162.0
offset_top = -417.0
offset_right = 472.0
offset_bottom = 209.0
